<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.epitech.mytrack.fragment.StatistiqueFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descStatistique"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/descStat"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_vitMoyenne"
                android:id="@+id/vitMoyenne"
                android:textColor="@android:color/holo_blue_dark" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/vitMoyenneNb"
                android:textColor="@android:color/holo_green_dark" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_vitMax"
                android:id="@+id/vitMax"
                android:textColor="@android:color/holo_blue_dark" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/vitMaxNb"
                android:textColor="@android:color/holo_green_dark" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_distance"
                android:id="@+id/distance"
                android:textColor="@android:color/holo_blue_dark" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/distanceNb"
                android:textColor="@android:color/holo_green_dark" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stat_trackNb"
                android:id="@+id/track"
                android:textColor="@android:color/holo_blue_dark" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:id="@+id/trackNb"
                android:textColor="@android:color/holo_green_dark" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
